fixed flex wrapping for responsive design

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
     align-items: center;
     margin-left: auto;
     margin-right: auto;
+    flex-wrap: wrap;
 }
 
 .img-name {
@@ -149,6 +150,7 @@ p {
     padding-top: 3rem;
     justify-content: center;
     margin-top: 2rem;
+    flex-wrap: wrap;
 }
 
 .contact-info-container {
@@ -163,6 +165,7 @@ p {
 .email-container {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .phone,
